--- a/Website/assets/css/style.css
+++ b/Website/assets/css/style.css
@@ -8,19 +8,24 @@
 }
 
 body {
+    font-family: 'Roboto', sans-serif;
     background-color: antiquewhite;
-}
 
+}
+#background{
+    background: #24C6DC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #514A9D, #24C6DC);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #514A9D, #24C6DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 100vw;
+    position: relative;
+
+}
 .header-container {
     width: 100vw;
     height: auto;
-    background-color: rgb(216, 226, 223);
     display: flex;
     justify-content: space-evenly;
     padding-top: 25px;
-    box-shadow: 0 8px 6px -6px black;
-    background: rgb(2, 0, 36);
-    background: linear-gradient(90deg, rgb(9, 4, 108) 0%, rgb(15, 15, 187) 35%, rgba(0, 212, 255, 1) 100%);
 
 
 }
@@ -39,13 +44,16 @@ body {
 
 .nav-opt li {
     margin-left: 25px;
-    color: rgb(51, 51, 240);
+    color: rgb(84, 84, 173);
     font-weight: 700;
     margin-top: 15px;
     margin-bottom: 35px;
 
 }
+.nav-opt li:hover{
+    color: rgb(10, 10, 15);
 
+}
 .head .logo img {
     width: 35px;
 
@@ -71,6 +79,13 @@ body {
 #medium{
     display: flex;
 }
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+    margin-left: 250px;
+}
 
 .left-part {
     width: 650px;
@@ -83,7 +98,7 @@ body {
 
 .left-title-box p {
     width: 400px;
-    font-size: 42px;
+    font-size: 49px;
     font-weight: 400;
     color: white;
     margin-bottom: 15px;
